# b3-api

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: run_test.yml
b3_api/: api_configs.py  api_utils.py  fund_detail.py  fund_documents.py  fund_events.py  fund_get_document.py  historical_series_available.py  historical_series_download.py
b3_api/parsers/: income_report_parser.py  models.py  monthly_report_parser.py  utils.py
tests/: test_fund_detail.py  test_fund_documents.py  test_fund_events.py  test_fund_get_document.py  test_historical_series_available.py  test_historical_series_download.py  utils.py
tests/parsers/: test_income_report_parser.py  test_monthly_report_parser.py
tests/parsers/test_income_report_parser/: informe_rendimentos.html  informe_rendimentos_10.html  informe_rendimentos_11.html  informe_rendimentos_2.html  informe_rendimentos_3.html  informe_rendimentos_4.html  informe_rendimentos_5.html  informe_rendimentos_6.html  informe_rendimentos_7.html  informe_rendimentos_8.html  informe_rendimentos_9.html
tests/parsers/test_monthly_report_parser/: monthly_report.html
tests/sample_series/: COTAHIST_A2010.TXT  COTAHIST_D07062023.TXT  COTAHIST_M022023.TXT
tests/test_fund_detail/: http_200.json
tests/test_fund_documents/: incomes.json
tests/test_fund_events/: sample.json
tests/test_historical_series_available/: sample.html
